--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -58,7 +58,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:gravity="center"
-                        android:text="@string/btn_dialog_update"
+                        android:text="GitHub"
                         android:textAllCaps="true" />
                 </LinearLayout>
 
